# Student-Score-Prediction-Project

./: README.md  ReadMe.md.txt  Student_scores.csv.xlsx  app.py  pyproject.toml  requirements.txt.txt  student_data.csv
